2018-10-20 Pavel Vinogradov <public@sourcemage.org>
	* DEPENDS, mozconfig, patches/old.configure.patch: removed old flags.
	  optimization flags are in mozconfig again
	* PRE_BUILD: removed obsolete flags for old gccs

2018-10-03 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: SECURITY_PATCH++, (CVE-2018-12386 and CVE-2018-12387)

2018-10-02 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 62.0.3

2018-09-29 Pavel Vinogradov <public@sourcemage.org>
	* DEPENDS: needs nss >= 3.38

2018-09-22 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 62.0.2, SECURITY_PATCH++, (CVE-2018-12385)

2018-09-18 Pavel Vinogradov <public@sourcemage.org>
	* patches/rust-fuchsia-targets.patch: added to fix parsing rust
	  targets
	* DEPENDS: needs sqlite with SQLITE_ENABLE_FTS3 option

2018-09-05 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 62.0, SECURITY_PATCH++,
	  (CVE-2018-12377, CVE-2018-12378, CVE-2018-12379, CVE-2017-16541,
	   CVE-2018-17381, CVE-2018-12382, CVE-2018-12383, CVE-2018-12375,
	   CVE-2018-12376)
	* DEPENDS: hunspell isn't needed anymore
	* mozconfig: removed --with-pthreads
	* patches/200*: updated

2018-08-08 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 61.0.2

2018-07-05 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 61.0.1

2018-06-26 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: SECURITY_PATCH++,
	  (CVE-2018-12359, CVE-2018-12360, CVE-2018-12361, CVE-2018-12358,
	   CVE-2018-12362, CVE-2018-5156, CVE-2018-12363, CVE-2018-12364,
	   CVE-2018-12365, CVE-2018-12371, CVE-2018-12366, CVE-2018-12367,
	   CVE-2018-12368, CVE-2018-12369, CVE-2018-12370, CVE-2018-5186,
	   CVE-2018-5187, CVE-2018-5188)

2018-06-25 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 61.0
	* patches/firefox-60.0.1-ffmpeg4.0-1.patch: removed, applied in
	  upstream

2018-06-07 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: SECURITY_PATCH++, (CVE-2018-6126)
