@@ -50,6 +50,7 @@ depends libffi              "--enable-system-ffi"                &&
 depends pixman              "--enable-system-pixman"             &&
 
 depends rust                                                     &&
+depends cbindgen                                                 &&
 
 optional_depends  startup-notification  \
                   "--enable-startup-notification" \
@@ -124,4 +125,9 @@ optional_depends  graphite2 \
 optional_depends  harfbuzz \
                   "--with-system-harfbuzz" \
                   "--without-system-harfbuzz" \
-                  "for system harfbuzz"
+                  "for system harfbuzz" &&
+
+optional_depends  nodejs \
+                  "--enable-nodejs" \
+                  "--disable-nodejs" \
+                  "for Node.js support"
