@@ -1,6 +1,6 @@
            SPELL=firefox
-         VERSION=62.0.3
-  SECURITY_PATCH=122
+         VERSION=63.0
+  SECURITY_PATCH=123
           SOURCE="${SPELL}-${VERSION}.source.tar.xz"
    SOURCE_URL[0]="http://releases.mozilla.org/pub/${SPELL}/releases/${VERSION}/source/${SOURCE}"
          SOURCE2="${SOURCE}.asc"
