@@ -57,15 +57,10 @@ diff --git a/dom/base/moz.build b/dom/base/moz.build
 diff --git a/gfx/harfbuzz/README-mozilla b/gfx/harfbuzz/README-mozilla
 --- a/gfx/harfbuzz/README-mozilla
 +++ b/gfx/harfbuzz/README-mozilla
-@@ -14,8 +14,13 @@ this file when updating HarfBuzz, and ch
- 
- The normal approach to updating HarfBuzz, therefore, is to pull the latest HB
- source into a scratch directory and do a local build; then copy the original
- sources AND the generated header mentioned above from the build directory into
- the mozilla tree.
+@@ -15,3 +15,8 @@
  
  If the collection of source files changes, manual updates to moz.build may be
- needed, as we don't use the upstream makefiles.
+ needed as we don't use the upstream makefiles.
 +
 +The in-tree copy may be omitted during build by --with-system-harfbuzz.
 +Make sure to keep pkg-config version check within toolkit/moz.configure in sync
@@ -153,12 +148,7 @@ diff --git a/gfx/skia/moz.build b/gfx/skia/moz.build
 diff --git a/gfx/thebes/moz.build b/gfx/thebes/moz.build
 --- a/gfx/thebes/moz.build
 +++ b/gfx/thebes/moz.build
-@@ -281,11 +281,14 @@ if CONFIG['MOZ_WIDGET_TOOLKIT'] in ('and
- 
- if CONFIG['MOZ_WIDGET_TOOLKIT'] == 'gtk3':
-     CXXFLAGS += CONFIG['MOZ_PANGO_CFLAGS']
- 
- LOCAL_INCLUDES += CONFIG['SKIA_INCLUDES']
+@@ -290,6 +290,9 @@
  
  DEFINES['GRAPHITE2_STATIC'] = True
  
