@@ -112,12 +112,7 @@ diff --git a/gfx/moz.build b/gfx/moz.build
 diff --git a/gfx/thebes/moz.build b/gfx/thebes/moz.build
 --- a/gfx/thebes/moz.build
 +++ b/gfx/thebes/moz.build
-@@ -279,16 +279,19 @@ CFLAGS += CONFIG['TK_CFLAGS']
- if CONFIG['MOZ_WIDGET_TOOLKIT'] in ('android'):
-     CXXFLAGS += CONFIG['CAIRO_FT_CFLAGS']
- 
- if CONFIG['MOZ_WIDGET_TOOLKIT'] == 'gtk3':
-     CXXFLAGS += CONFIG['MOZ_PANGO_CFLAGS']
+@@ -288,7 +288,10 @@
  
  LOCAL_INCLUDES += CONFIG['SKIA_INCLUDES']
  
@@ -129,10 +124,6 @@ diff --git a/gfx/thebes/moz.build b/gfx/thebes/moz.build
  
  if CONFIG['MOZ_SYSTEM_HARFBUZZ']:
      CXXFLAGS += CONFIG['MOZ_HARFBUZZ_CFLAGS']
- 
- if CONFIG['CC_TYPE'] == 'clang':
-     # Suppress warnings from Skia header files.
-     SOURCES['gfxPlatform.cpp'].flags += ['-Wno-implicit-fallthrough']
 diff --git a/old-configure.in b/old-configure.in
 --- a/old-configure.in
 +++ b/old-configure.in
