@@ -1,3 +1,8 @@
+2018-10-22 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 63.0, SECURITY_PATCH++
+	* DEPENDS: requires cbindgen, added optional nodejs
+	* patches/200*: updated
+
 2018-10-20 Pavel Vinogradov <public@sourcemage.org>
 	* DEPENDS, mozconfig, patches/old.configure.patch: removed old flags.
 	  optimization flags are in mozconfig again
